# Netology-AI-Dev

./: .gitignore  README.md  pyproject.toml
.zed/: debug.json  settings.json
DEV-ENV/: README.md
homeworks/libs/: pyproject.toml
homeworks/m1-modern-ai-landscape/: README.md
homeworks/m1-modern-ai-landscape/e02-optimization-economics/: README.md
homeworks/m1-modern-ai-landscape/e03-/: test-2.py
homeworks/m1-modern-ai-landscape/e03-ollama-local-models/: Modefile-StructuredOutput  Modelfile  README.md  bm.py  objs_select.py
homeworks/m1-modern-ai-landscape/e04-comparison-cost/: README.md  bm.py  eval_set.py
homeworks/m1-modern-ai-landscape/e05-opensource-huggingface/: .gitignore  README.md  main.py  pyproject.toml
homeworks/m1-modern-ai-landscape/e05-opensource-huggingface/src/: demo_gradio.py  list_all_tasks.py  list_task_models.py  test_cloud.py  test_models.py
homeworks/m1-modern-ai-landscape/е01-models-overview/: README.md
homeworks/m2-ai-api-integration/: README.md
homeworks/m2-ai-api-integration/b05_suppassist/: .env.example  README.md  __main__.py  cli.py  config.py  pyproject.toml
homeworks/m2-ai-api-integration/b05_suppassist/core/: assistant.py
homeworks/m2-ai-api-integration/b05_suppassist/infrastructure/: cache.py  llm.py
homeworks/m2-ai-api-integration/b05_suppassist/prompts/: classifier_few_shots.json
homeworks/m2-ai-api-integration/b06_mm_suppassist/: .env.example  .gitignore  README.md  SOLVING.md  cli.py  config.py  models.py  pyproject.toml
homeworks/m2-ai-api-integration/b06_mm_suppassist/core/: assistant.py  classification.py
homeworks/m2-ai-api-integration/b06_mm_suppassist/infrastructure/: llm.py  stt.py  tts.py
homeworks/m2-ai-api-integration/b06_mm_suppassist/prompts/: classifier_system_prompt.txt  loader.py  system_prompt.txt
homeworks/m2-ai-api-integration/e01-providers-api/: .env.example  README.md  prov-api.py  pyproject.toml
homeworks/m2-ai-api-integration/e02-prompt-engineering/: README.md  config.py  prompt-i.py  pyproject.toml
homeworks/m2-ai-api-integration/e03-reliability/: README.md  prov-api.py  pyproject.toml
homeworks/m2-ai-api-integration/e04-caching/: README.md  caching.py  config.py  redis_cache.py  simple_cache.py
homeworks/m2-ai-api-integration/m3/: README.md
homeworks/m2-ai-api-integration/m3/b3/: README.md
homeworks/m2-ai-api-integration/m3/b6/: README.md
homeworks/m2-ai-api-integration/m3/b7/: README.md
homeworks/m2-ai-api-integration/m3/b8/: README.md
homeworks/m2-ai-api-integration/m4/: README.md
homeworks/m3/: README.md
homeworks/m3-b1/: README.md
homeworks/m3/b2/: README.md
homeworks/m3/b3/: README.md
homeworks/m3/b4/: README.md
homeworks/m3/b5/: README.md
homeworks/m4/b1/: README.md
