[project]
name = "netology-ai-dev"
version = "0.1.0"
description = "Работа по курсу AI-Dev"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "gradio>=6.14.0",
    "huggingface-hub>=0.20.0",
    "openai>=2.33.0",
    "protobuf>=7.34.1",
    "sentencepiece>=0.2.1",
    "tiktoken>=0.12.0",
    "transformers>=4.35.0",
]

[tool.basedpyright]
venvPath = "."
venv = ".venv"
