[project]
name = "netology-ai-dev"
version = "0.1.0"
description = "Работа по курсу AI-Dev"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "gradio>=6.15.2",
    "huggingface-hub>=1.17.0",
    "openai>=2.33.0",
    "protobuf>=7.34.1",
    "sentencepiece>=0.2.1",
    "tiktoken>=0.12.0",
    "transformers>=4.35.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.14.1",
    "tenacity>=9.1.4",
    "loguru>=0.7.3",
    "redis>=8.0.0",
    "httpx[socks]>=0.27.0"
]

[dependency-groups]
dev = [
    "ruff>=0.15.15",
]

# Настройка для Zed (basedpyright)
[tool.basedpyright]
venvPath = "."
venv = ".venv"
typeCheckingMode = "basic" # Вместо рекомендованного строгого режима



# Говорим линтеру искать импорты во ВСЕХ вложенных папках homeworks
extraPaths = ["homeworks/**/*"]
# Отключаем ругань на "неявный относительный импорт"
reportImplicitRelativeImport = "none"

# Сборщик делает всю папку homeworks доступной в sys.path
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["homeworks"]

# Синхронизируем Ruff
[tool.ruff]
src = ["homeworks"]

[tool.ruff.lint]
# Отключаем предупреждение Ruff о неявных относительных импортах (TID252)
ignore = ["TID252"]
